Fix scrollbar on firefox

--- a/app/src/styles/variables.scss
+++ b/app/src/styles/variables.scss
@@ -22,8 +22,9 @@
     --black: #000000;
 
     --scroll-track: #00000000;
-    --scroll-thumb: #adadad;
-    --scroll-thumb-hover: #9b9b9b;
+    --scroll-thumb: #bdbdbd;
+    --scroll-thumb-hover: #8b8b8b;
+    --scroll-thumb-active: #6c6c6c;
 
     --text: var(--black);
     --text-contrast: var(--white);
